# pong-sdl2-c

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
assets/: CMakeLists.txt  assets.fig
assets/macos/: Info.plist.in  app_icon.icns  installer_background.tiff  installer_icon.icns  installer_setup.scpt.in
assets/windows/: app_info.rc.in
cmake/: FindCheck.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  config.h.in
src/: CMakeLists.txt  main.c
src/components/: collision.h  component.h  controller.h  geometry.h  rigid_body.h
src/entities/: ball.c  ball.h  paddle.c  paddle.h  wall.c  wall.h  world.c  world.h
src/systems/: keyboard.c  keyboard.h  physics.c  physics.h  rendering.c  rendering.h
src/utils/: math.c  math.h  settings.h
test/: CMakeLists.txt  test_systems.c  test_utils.c
